<resources>
    <string name="app_name">The Gorgeous Login</string>

    <string name="login_image">Login_Image</string>
    <string name="existing">Existing</string>
    <string name="new_user">New</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="confirmation">Confirmation</string>
    <string name="sign_up">Sign Up</string>
</resources>
